# file-watcher

./: .gitignore  config.yaml  mutation.toml  noxfile.py  pyproject.toml
src/file_watcher/: console.py  file_watcher.py
src/file_watcher/config/: config.py  config_elements.py
test/file_watcher/: console_test.py
test/file_watcher/config/: config_test.py
