[tool.poetry]
name = "file-watcher"
version = "0.1.0"
description = "Watches a file directory and sends emails on changes"
authors = ["Steve Ortiz <stevenortiz.es@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
watchdog = "^0.10.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
assertpy = "^1.0"
cosmic_ray = "^7.0.0"

[tool.poetry.scripts]
file-watcher = "file_watcher.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
